# dgen-eval

./: .gitignore  README.md  __init__.py  agentic framework and a sharp distinction between the horizontal (platform_tech) and vertical (use case_expansion) components (1).docx  agentic framework and a sharp distinction between the horizontal (platform_tech) and vertical (use case_expansion) components.docx  app.py  build.py  cli.py  dashboard.py  eval  evaluation_config.yaml  evaluation_pipeline.py  file_modifier_llm.py  init_eval_environment.py  install.py  llm_adapter.py  mlflow  mrm_cleaner_v2.py  mrm_cleaner_v3.py  mrm_cleaner_v4.py  prompts  prompts.yaml  prompts2  pyproject.toml  readme  requirements.txt  run_dashboard.sh  setup.py  start.py  v0  v1
config/: odd1.yaml  odd2.yaml  odd3.yaml  prompts.yaml
core/: config.py  data_models.py
deployment/: Dockerfile  deploy-script.sh  deployment.yaml  docker-compose.yaml  health-check.py  openshift-readme.md  persistent-volumes.yaml
evaluation_results/: Section1_eval.csv  Section1_questions_and_guidelines.csv  Section2_eval.csv  Section2_questions_and_guidelines.csv  Section3_eval.csv  Section3_questions_and_guidelines.csv  merged_evaluation.csv
evaluators/: base_evaluator.py  llm_evaluator.py
examples/: ODD_Section_1_short.md  ODD_Section_2_short.md  ODD_Section_3_short.md
llm/: adapter.py  parsers.py  prompts.py
pipeline/: document_processors.py  evaluation_runner.py  reporting.py
